--- a/charts/airship/airship-armada/Jenkinsfile
+++ b/charts/airship/airship-armada/Jenkinsfile
@@ -1,6 +1,5 @@
 currentBuild.displayName = "#${BUILD_NUMBER}-${GERRIT_EVENT_TYPE}"
 ARMADA_COMMIT=""
-HELM_ARTIFACT_URL="https://storage.googleapis.com/kubernetes-helm/helm-v2.11.0-linux-amd64.tar.gz"
 
 vm(flavor: "m1.large"){
     sh ('hostname')
@@ -51,7 +50,7 @@ vm(flavor: "m1.large"){
     dir("${WORKSPACE}/${JOB_BASE_NAME}"){
         stage('Build & Package'){
             sh 'sudo apt-get install -y make'
-            def status = sh(returnStatus: true, script: "sudo make charts HELM_ARTIFACT_URL=${HELM_ARTIFACT_URL}")
+            def status = sh(returnStatus: true, script: "sudo make charts")
             if (status != 0) {
                 currentBuild.result = 'FAILED'
                 notify.msg("Charts build failed for Armada SHA: ${ARMADA_COMMIT} " +
