--- a/code-review/Jenkinsfile
+++ b/code-review/Jenkinsfile
@@ -1,86 +1,82 @@
+import com.att.nccicd.config.conf
+
 currentBuild.displayName = "#${BUILD_NUMBER} ${GERRIT_PROJECT}-${GERRIT_EVENT_TYPE}"
 
-//large VM for running tests Ex: Nova, Neutron
-vm2('bootstrap.sh',
-         'cicd-ubuntu-16.04-server-cloudimg-amd64',
-         'm1.xlarge',
-         '',
-         'basic',
-         false){
-    stage('Project Checkout'){
-        cleanWs()
-        //To be removed once all projects are controlling their own dependencies
-        //bootstrap was not loading as expected
-        //removing docker.io from the list of installed packages since it is
-        //causing the VM to stall and jobs stay at that stage for >15hrs
-        sh '''sudo apt-get install -y \
-              git make gcc python \
-              build-essential \
-              python3-minimal \
-              python3-setuptools \
-              python-pip \
-              python-dev \
-              python-flake8 \
-              python3-pip \
-              libffi-dev \
-              gettext \
-              bandit \
-              mongodb \
-              libpq-dev \
-              libldap2-dev \
-              libsasl2-dev \
-              libssl-dev'''
-
-        vm2.setproxy()
-        //tox > 2.3.1 for running tests Ex: Horizon, Neutron
-        sh 'sudo pip install --no-cache-dir tox'
-        if(env.GERRIT_NEWREV){
-            if(!GERRIT_HOST.contains('review')){
-                gerrit.cloneToBranch("${INTERNAL_GERRIT_SSH}/${GERRIT_PROJECT}",
-                                     GERRIT_NEWREV,
-                                     "jenkins",
-                                     INTERNAL_GERRIT_KEY)
-            } else {
-                gerrit.cloneToBranch("https://"+GERRIT_HOST+"/"+GERRIT_PROJECT, GERRIT_NEWREV, "jenkins")
-                dir("${WORKSPACE}/jenkins"){
-                    gerrit.rebase()
+def label = "worker-${UUID.randomUUID().toString()}"
+podTemplate(label: label,yaml: """
+            apiVersion: v1
+            kind: Pod
+            spec:
+              securityContext:
+                runAsUser: 0
+              nodeSelector:
+                dind-node: enabled
+            """, containers: [
+                containerTemplate(name: "ubuntu",
+                                  image: conf.CODE_REVIEW_IMAGE,
+                                  command: "cat",
+                                  ttyEnabled: true,
+                                  envVars: [
+                                    envVar(key: "http_proxy", value: HTTP_PROXY),
+                                    envVar(key: "https_proxy", value: HTTP_PROXY),
+                                    envVar(key: "HTTP_PROXY", value: HTTP_PROXY),
+                                    envVar(key: "HTTPS_PROXY", value: HTTP_PROXY),
+                                    envVar(key: "no_proxy", value: NO_PROXY),
+                                    envVar(key: "NO_PROXY", value: NO_PROXY)
+                ])],
+                volumes: [hostPathVolume(hostPath: '/var/run/dindproxy/docker.sock', mountPath: '/var/run/docker.sock')]) {
+    node(label){
+        container("ubuntu"){
+            stage('Project Checkout'){
+                if(env.GERRIT_NEWREV){
+                    if(!GERRIT_HOST.contains('review')){
+                        gerrit.cloneToBranch("${INTERNAL_GERRIT_SSH}/${GERRIT_PROJECT}",
+                                             GERRIT_NEWREV,
+                                             "jenkins",
+                                             INTERNAL_GERRIT_KEY)
+                    } else {
+                        gerrit.cloneToBranch("https://"+GERRIT_HOST+"/"+GERRIT_PROJECT, GERRIT_NEWREV, "jenkins")
+                        dir("${WORKSPACE}/jenkins"){
+                            gerrit.rebase()
+                        }
+                    }
+                } else {
+                    if(!GERRIT_HOST.contains('review')){
+                        gerrit.cloneToBranch("${INTERNAL_GERRIT_SSH}/${GERRIT_PROJECT}",
+                                             GERRIT_PATCHSET_REVISION,
+                                             "jenkins",
+                                             INTERNAL_GERRIT_KEY)
+                    } else {
+                        gerrit.cloneToBranch("https://"+GERRIT_HOST+"/"+GERRIT_PROJECT, GERRIT_PATCHSET_REVISION, "jenkins")
+                        dir("${WORKSPACE}/jenkins"){
+                            gerrit.rebase()
+                        }
+                    }
+                }
+                // set UPPER_CONSTRAINTS_FILE from mos-requirements
+                if(GERRIT_PROJECT.contains('mos-')){
+                    requirements = 'mos-requirements'
+                    gerrit.cloneProject("${INTERNAL_GERRIT_SSH}/${requirements}",
+                                         GERRIT_BRANCH,
+                                         "refs/heads/${GERRIT_BRANCH}",
+                                         requirements,
+                                         INTERNAL_GERRIT_KEY)
+                    sh "cp ${WORKSPACE}/${requirements}/upper-constraints.txt ${WORKSPACE}/jenkins/upper-constraints.txt"
+                    sh "rm -rf ${WORKSPACE}/${requirements}"
                 }
             }
-        } else {
-            if(!GERRIT_HOST.contains('review')){
-                gerrit.cloneToBranch("${INTERNAL_GERRIT_SSH}/${GERRIT_PROJECT}",
-                                     GERRIT_PATCHSET_REVISION,
-                                     "jenkins",
-                                     INTERNAL_GERRIT_KEY)
-            } else {
-                gerrit.cloneToBranch("https://"+GERRIT_HOST+"/"+GERRIT_PROJECT, GERRIT_PATCHSET_REVISION, "jenkins")
-                dir("${WORKSPACE}/jenkins"){
-                    gerrit.rebase()
-                }
-            }
-        }
-        // set UPPER_CONSTRAINTS_FILE from mos-requirements
-        if(GERRIT_PROJECT.contains('mos-')){
-            requirements = 'mos-requirements'
-            gerrit.cloneProject("${INTERNAL_GERRIT_SSH}/${requirements}",
-                                 GERRIT_BRANCH,
-                                 "refs/heads/${GERRIT_BRANCH}",
-                                 requirements,
-                                 INTERNAL_GERRIT_KEY)
-            sh "cp ${WORKSPACE}/${requirements}/upper-constraints.txt ${WORKSPACE}/jenkins/upper-constraints.txt"
-            sh "rm -rf ${WORKSPACE}/${requirements}"
-        }
-    }
-    dir("${WORKSPACE}/jenkins"){
-        stage('Code-Review'){
-            withEnv(["UPPER_CONSTRAINTS_FILE=${WORKSPACE}/jenkins/upper-constraints.txt"]) {
-                cmd = (!fileExists('Makefile')) ? "sudo tox -e pep8,py27" : "sudo -H make tests"
-                def status = sh(returnStatus: true, script: cmd)
-                if (status != 0) {
-                    currentBuild.result = 'FAILED'
-                    notify.msg("Code Review failed for ${GERRIT_PROJECT} ${GERRIT_CHANGE_NUMBER}!")
-                }else{
-                    notify.msg("Code Review successful for ${GERRIT_PROJECT} ${GERRIT_CHANGE_NUMBER}")
+            dir("${WORKSPACE}/jenkins"){
+                stage('Code-Review'){
+                    withEnv(["UPPER_CONSTRAINTS_FILE=${WORKSPACE}/jenkins/upper-constraints.txt"]) {
+                cmd = (!fileExists('Makefile')) ? "tox -e pep8,py27" : "make tests"
+                        def status = sh(returnStatus: true, script: cmd)
+                        if (status != 0) {
+                            currentBuild.result = 'FAILED'
+                            notify.msg("Code Review failed for ${GERRIT_PROJECT} ${GERRIT_CHANGE_NUMBER}!")
+                        }else{
+                            notify.msg("Code Review successful for ${GERRIT_PROJECT} ${GERRIT_CHANGE_NUMBER}")
+                        }
+                    }
                 }
             }
         }
