[fix] Adjust Airship image build jobs for opendev
The Airship project (along with the other OpenStack Foundation
projects) moved to new git hosting infrastructure with a new
domain name - opendev.org.  This change adjusts the cicd project
to build images from these new locations.  As part of this change,
the 'airship-' prefixes have been removed from project names, and
the projects instead live under an /airship namespace (instead
of the previous /openstack).

Change-Id: I429b5016ee68645047b376187e5f715cb0d7b4fe

--- a/images/airship/pegleg/Jenkinsfile
+++ b/images/airship/pegleg/Jenkinsfile
@@ -18,7 +18,7 @@ vm(NODE_NAME, NODE_TMPL) {
             IMAGE_TAG=env.GERRIT_NEWREV
             IMAGE="${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}"
         }
-        gerrit.cloneToBranch("https://git.openstack.org/openstack/airship-pegleg", IMAGE_TAG,"")
+        gerrit.cloneToBranch("https://review.opendev.org/airship/pegleg", IMAGE_TAG,"")
         if(GERRIT_EVENT_TYPE != 'change-merged') {
               gerrit.rebase()
         }
