--- a/images/airship/armada/Jenkinsfile
+++ b/images/airship/armada/Jenkinsfile
@@ -85,13 +85,13 @@ vms {
 
     stage('Checkout Promenade'){
         node("${NODE_BASE}-build"){
-            gerrit.clone("https://git.openstack.org/openstack/airship-promenade", "*/master")
+            gerrit.clone("https://review.opendev.org/airship/promenade", "*/master")
             if(env.GERRIT_NEWREV){
                 echo ("${GERRIT_NEWREV} is being used to override refspec: ${GERRIT_REFSPEC}")
                 IMAGE_TAG=env.GERRIT_NEWREV
                 IMAGE="${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}"
             }
-            gerrit.cloneToBranch("https://git.openstack.org/openstack/airship-${JOB_BASE_NAME}", IMAGE_TAG,"${JOB_BASE_NAME}")
+            gerrit.cloneToBranch("https://review.opendev.org/airship/${JOB_BASE_NAME}", IMAGE_TAG,"${JOB_BASE_NAME}")
             if(GERRIT_EVENT_TYPE != 'change-merged') {
                 sh '''git config user.email "attcomdev.jenkins@gmail.com"
                     git config user.name "Jenkins"
