--- a/images/airship/deckhand/Jenkinsfile
+++ b/images/airship/deckhand/Jenkinsfile
@@ -17,7 +17,7 @@ vm(NODE_NAME, NODE_TMPL) {
             IMAGE_TAG="${GERRIT_NEWREV}"
         }
         IMAGE="${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}.${BUILD_NUMBER}"
-        gerrit.cloneToBranch("https://git.openstack.org/openstack/airship-${JOB_BASE_NAME}", IMAGE_TAG,"")
+        gerrit.cloneToBranch("https://review.opendev.org/airship/${JOB_BASE_NAME}", IMAGE_TAG,"")
         if(GERRIT_EVENT_TYPE != 'change-merged') {
             sh '''git config user.email "airship.jenkins@gmail.com"
                   git config user.name "Jenkins"
