[fix] Adjust Airship image build jobs for opendev
The Airship project (along with the other OpenStack Foundation
projects) moved to new git hosting infrastructure with a new
domain name - opendev.org.  This change adjusts the cicd project
to build images from these new locations.  As part of this change,
the 'airship-' prefixes have been removed from project names, and
the projects instead live under an /airship namespace (instead
of the previous /openstack).

--- a/images/airship/promenade/promenade/Jenkinsfile
+++ b/images/airship/promenade/promenade/Jenkinsfile
@@ -92,7 +92,7 @@ vms {
                             relativeTargetDir: ""]],
                             submoduleCfg: [],
                             userRemoteConfigs: [[refspec: '${GERRIT_REFSPEC}',
-                                                 url: "https://git.openstack.org/openstack/airship-${JOB_BASE_NAME}"]]]
+                                                 url: "https://opendev.org/airship/${JOB_BASE_NAME}"]]]
             if(GERRIT_EVENT_TYPE != 'change-merged') {
                 sh '''git config user.email "attcomdev.jenkins@gmail.com"
                     git config user.name "Jenkins"
