Add openvswitch to list of images built from openstack-helm-images
Change-Id: I0705eb73ea9a0e40f84234a7ea6e910e3f843302

--- a/images/openstack/helm-images/Jenkinsfile
+++ b/images/openstack/helm-images/Jenkinsfile
@@ -81,7 +81,7 @@ podTemplate(label: label,
                                             --build-arg CALICOCTL_VERSION=${CALICOCTL_VERSION} \
                                             --build-arg http_proxy=${HTTP_PROXY} \
                                             --build-arg https_proxy=${HTTPS_PROXY} \
-                                            --build-arg NO_PROXY=${NO_PROXY}" \
+                                            --build-arg NO_PROXY=${NO_PROXY} \
                           IMAGE_TAG=${IMAGE_TAG}"""
                 }
             }
