Fix git clone url
This ps moves repo url from git.openstack.org to
review.opendev.org for openstack-helm-images repo

Signed-off-by: Sreejith Punnapuzha <Sreejith.Punnapuzha@outlook.com>
Change-Id: I93c985a50cb030041a1bcc52d98103955081f7d9

--- a/images/openstack/helm-images/Jenkinsfile
+++ b/images/openstack/helm-images/Jenkinsfile
@@ -6,7 +6,7 @@ IMAGE_PREFIX = "openstack-helm-images"
 IMAGE_LATEST = "${IMAGE_PREFIX}/${JOB_BASE_NAME}:latest"
 BASE_IMAGE = "ubuntu_xenial"
 VERSION = 1.0
-HELM_IMAGES_URL = "https://git.openstack.org/openstack/openstack-helm-images"
+HELM_IMAGES_URL = "https://review.opendev.org/openstack/openstack-helm-images"
 HELM_IMAGES_HOME = ""
 CEPH_REPO = "https://${ARTF_WEB_URL}/mirantis-dev-ceph/xenial/"
 CEPH_KEY = "https://${ARTF_WEB_URL}/mirantis-dev-ceph/xenial/archive-ceph-mimic.key"
