Fix airship-in-a-bottle urls openstack.org -> opnedev.org
Airship in a bottle project was reallocated from
review.openstack.org/openstack/airship-in-a-bottle to
review.opendev.org/airship/in-a-bottle, update
urls to use new repository locations.

Change-Id: I18947757ddc0764f24b6274567e8d66830b52245

--- a/integration/airship/gate-multinode/Jenkinsfile
+++ b/integration/airship/gate-multinode/Jenkinsfile
@@ -2,8 +2,8 @@
 
 ARTF_BASE = "cicd/logs/${JOB_NAME}/${BUILD_ID}"
 
-REPO_URL = 'https://git.openstack.org/openstack/airship-in-a-bottle'
-REPO_HOME = '/root/deploy/airship-in-a-bottle'
+REPO_URL = 'https://review.opendev.org/airship/in-a-bottle'
+REPO_HOME = '/root/deploy/in-a-bottle'
 
 publicNet = 'public'
 if (env.AIRSHIP_VM_PUBLIC_NET) {
