Use updated nc-cicd config
Change-Id: If670f4d5cd611f23f7aa4c28ce08d0afe15effa9

--- a/images/att-comdev/minimirror/Jenkinsfile
+++ b/images/att-comdev/minimirror/Jenkinsfile
@@ -1,4 +1,5 @@
-import com.att.nccicd.config.conf
+import com.att.nccicd.config.conf as config
+conf = new config(env).CONF
 
 import groovy.json.JsonSlurperClassic
 import groovy.json.JsonOutput
