--- a/images/baseimages/Jenkinsfile
+++ b/images/baseimages/Jenkinsfile
@@ -1,4 +1,5 @@
-// import com.att.nccicd.config.conf
+// import com.att.nccicd.config.conf as config
+//conf = new config(env).CONF
 IMAGE_PREFIX="att-comdev"
 IMAGE_TAG="${GERRIT_PATCHSET_REVISION}"
 SEMANTIC_RELEASE_VERSION = "0.1.0"
