update image pipelines with new repo path
This ps updates image pipelines to publish under nc-images repo
except for
 - airship image pipelines
    - changes to be made into internal repo
 - mos image pipeline
    - to be taken care in separate ps

Change-Id: I3b72bc62049996e9007dfa67e8ca16b43e79bb14

--- a/images/baseimages/Jenkinsfile
+++ b/images/baseimages/Jenkinsfile
@@ -1,6 +1,5 @@
-// import com.att.nccicd.config.conf as config
-//conf = new config(env).CONF
-IMAGE_PREFIX="att-comdev"
+REPO_PREFIX = "nc-images"
+IMAGE_PREFIX="${REPO_PREFIX}/att-comdev"
 IMAGE_TAG="${GERRIT_PATCHSET_REVISION}"
 SEMANTIC_RELEASE_VERSION = "0.1.0"
 
