--- a/images/coredns/Jenkinsfile
+++ b/images/coredns/Jenkinsfile
@@ -1,6 +1,7 @@
 NODE_NAME="${JOB_BASE_NAME}-${BUILD_NUMBER}"
 NODE_TMPL = "docker/ubuntu.m1.medium.yaml"
 currentBuild.displayName = "#${BUILD_NUMBER}"
+REPO_PREFIX = "nc-images"
 
 vm(NODE_NAME,NODE_TMPL) {
 /*    stage("Env Setup") {
@@ -42,7 +43,7 @@ vm(NODE_NAME,NODE_TMPL) {
     }
 
     stage('Upload') {
-        publish.artifactory('coredns:latest','coredns:latest')
+        publish.artifactory('coredns:latest',"${REPO_PREFIX}/coredns:latest")
     }
 }
 
