--- a/images/nc/ro-helm/Jenkinsfile
+++ b/images/nc/ro-helm/Jenkinsfile
@@ -1,5 +1,6 @@
 DOCKER_REGISTRY="${ARTF_DOCKER_URL}"
-IMAGE_PREFIX="nc"
+REPO_PREFIX = "nc-images"
+IMAGE_PREFIX="${REPO_PREFIX}/nc"
 IMAGE_NAME="ro"
 IMAGE_VERSION="1.0.0"
 IMAGE_TAG="${GERRIT_PATCHSET_REVISION}"
