update image pipelines with new repo path
This ps updates image pipelines to publish under nc-images repo
except for
 - airship image pipelines
    - changes to be made into internal repo
 - mos image pipeline
    - to be taken care in separate ps

Change-Id: I3b72bc62049996e9007dfa67e8ca16b43e79bb14

--- a/images/att-comdev/minimirror/Jenkinsfile
+++ b/images/att-comdev/minimirror/Jenkinsfile
@@ -3,7 +3,8 @@ import com.att.nccicd.config.conf
 import groovy.json.JsonSlurperClassic
 import groovy.json.JsonOutput
 
-IMAGE_PREFIX="att-comdev"
+REPO_PREFIX = "nc-images"
+IMAGE_PREFIX="${REPO_PREFIX}/att-comdev"
 VERSION=1.0
 GERRIT_CLONE_URL = "ssh://" + conf.SSH_REPO_USER + "@" + conf.GERRIT_URL
 REFSPEC = "refs/changes/*:refs/changes/*"
