--- a/images/baseimages/Jenkinsfile
+++ b/images/baseimages/Jenkinsfile
@@ -1,5 +1,6 @@
 // import com.att.nccicd.config.conf
-IMAGE_PREFIX="att-comdev"
+REPO_PREFIX = "nc-images"
+IMAGE_PREFIX="${REPO_PREFIX}/att-comdev"
 IMAGE_TAG="${GERRIT_PATCHSET_REVISION}"
 SEMANTIC_RELEASE_VERSION = "0.1.0"
 
