--- a/images/openstack/helm-images/Jenkinsfile
+++ b/images/openstack/helm-images/Jenkinsfile
@@ -2,7 +2,8 @@ import com.att.nccicd.config.conf
 
 IMAGE_TAG = "${GERRIT_PATCHSET_REVISION}"
 DOCKER_REGISTRY = "${ARTF_DOCKER_URL}"
-IMAGE_PREFIX = "openstack-helm-images"
+REPO_PREFIX = "nc-images"
+IMAGE_PREFIX = "${REPO_PREFIX}/openstack-helm-images"
 IMAGE_LATEST = "${IMAGE_PREFIX}/${JOB_BASE_NAME}:latest"
 BASE_IMAGE = "ubuntu:xenial"
 OS_RELEASE = "ubuntu_xenial"
