--- a/images/airship/shipyard/airflow/Jenkinsfile
+++ b/images/airship/shipyard/airflow/Jenkinsfile
@@ -3,20 +3,21 @@ NODE_NAME="${JOB_BASE_NAME}-${BUILD_NUMBER}"
 NODE_TMPL="docker/ubuntu.m1.medium.yaml"
 
 IMAGE_TAG="${GERRIT_PATCHSET_REVISION}"
+DISTRO="ubuntu_xenial"
 DOCKER_REGISTRY="${ARTF_DOCKER_URL}"
 IMAGE_PREFIX="att-comdev"
 IMAGE_LATEST = "${IMAGE_PREFIX}/${JOB_BASE_NAME}:latest"
 QUAY_IMAGE_LATEST="attcomdev/${JOB_BASE_NAME}:latest"
 CUSTOM_URL=''
 
-IMAGE="${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}"
+IMAGE="${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}-${DISTRO}"
 
 vm(NODE_NAME, NODE_TMPL) {
     stage('Checkout'){
         if(env.GERRIT_NEWREV){
             echo ("${GERRIT_NEWREV} is being used to override refspec: ${GERRIT_REFSPEC}")
             IMAGE_TAG=env.GERRIT_NEWREV
-            IMAGE="${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}"
+            IMAGE="${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}-${DISTRO}"
         }
         gerrit.cloneToBranch("https://git.openstack.org/openstack/airship-shipyard", IMAGE_TAG,"")
         if(GERRIT_EVENT_TYPE != 'change-merged') {
@@ -36,7 +37,7 @@ vm(NODE_NAME, NODE_TMPL) {
         sh "sudo docker inspect ${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}"
     }
     stage('Image Publish'){
-        publish.artifactory (IMAGE, "${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}")
+        publish.artifactory (IMAGE, "${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}-${DISTRO}")
         if (GERRIT_EVENT_TYPE == 'change-merged') {
             publish.artifactory (IMAGE, IMAGE_LATEST)
             publish.quay (IMAGE, QUAY_IMAGE_LATEST)
