Specify concurrency for py27 checks
Change-Id: Ie26020cf0deb0beb13c700f20d75b8a863e1e478

--- a/code-review/Jenkinsfile
+++ b/code-review/Jenkinsfile
@@ -102,7 +102,10 @@ podTemplate(label: label,yaml: """
             dir("${WORKSPACE}/jenkins"){
                 stage('Code-Review'){
                     withEnv(["UPPER_CONSTRAINTS_FILE=${WORKSPACE}/jenkins/upper-constraints.txt"]) {
-                        cmd = (!fileExists('Makefile')) ? "tox -e pep8,py27" : "make tests"
+                        cmd = ((!fileExists('Makefile')) ?
+                               'set +e; res=0; for check in pep8 "py27 -- --concurrency=16"; do ' +
+                               'tox -e$check; res=$(( $res | $? )); done; exit $res' :
+                               "make tests")
                         sshagent([INTERNAL_GERRIT_KEY]) {
                             def status = sh(returnStatus: true, script: cmd)
                             if (status != 0) {
