--- a/images/att-comdev/minimirror/Jenkinsfile
+++ b/images/att-comdev/minimirror/Jenkinsfile
@@ -17,6 +17,27 @@ IMAGE_LATEST="${ARTF_DOCKER_URL}/${IMAGE_PREFIX}/mini-mirror:latest"
 IMAGE_DOCKER="${ARTF_DOCKER_URL}/${IMAGE_PREFIX}/mini-mirror:${GERRIT_PATCHSET_REVISION}-docker-ubuntu"
 IMAGE_DOCKER_LATEST="${ARTF_DOCKER_URL}/${IMAGE_PREFIX}/mini-mirror:latest"
 
+String determineRef(String repo) {
+
+    // Determine if job was triggered by Gerrit
+    if (env.GERRIT_EVENT_TYPE) {
+
+        // Use master for if change was merged, otherwise use change revision
+        if (env.GERRIT_EVENT_TYPE == "change-merged") {
+            return "origin/master"
+        } else {
+            return env.GERRIT_NEWREV || env.GERRIT_PASTCHSET_REVISION
+        }
+    }
+
+    // Job was triggered manually, determine which reference to use
+    if (repo == "aic-clcp-manifests") {
+        return params.CLCP_MANIFESTS_REF
+    }
+
+    return params.OSH_IMAGES_REF
+}
+
 def label = "worker-${UUID.randomUUID().toString()}"
 podTemplate(label: label,yaml: """
             apiVersion: v1
@@ -35,34 +56,24 @@ podTemplate(label: label,yaml: """
     node(label){
         container("ubuntu"){
 
-            stage('Setup environment'){
+            stage("Setup environment"){
                 sh "apt-get install sudo make docker.io curl -y"
             }
-            stage("checkout"){
-                if("${GERRIT_PROJECT}" == "${MINIMIRROR_PROJECT}" && env.GERRIT_NEWREV){
-                    echo ("${GERRIT_NEWREV} is being used to override refspec: ${GERRIT_REFSPEC}")
-                    gerrit.cloneToBranch("https://opendev.org/openstack/openstack-helm-images",  "${GERRIT_NEWREV}", "${JOB_BASE_NAME}")
-                }
-                else if("${GERRIT_PROJECT}" == "${MINIMIRROR_PROJECT}" && GERRIT_EVENT_TYPE != 'change-merged') {
-                    gerrit.cloneToBranch("https://opendev.org/openstack/openstack-helm-images", "${GERRIT_PATCHSET_REVISION}", "${JOB_BASE_NAME}")
-                }
-                else {
-                    sh "mkdir -p  ${JOB_BASE_NAME}"
-                    dir("${WORKSPACE}/${JOB_BASE_NAME}") {
-                        git "https://opendev.org/openstack/openstack-helm-images"
-                        sh "git checkout master"
-                    }
-                }
+            stage("checkout") {
+                // Clone OSH images
+                def ref = determineRef("openstack/openstack-helm-images")
+                gerrit.cloneToBranch("https://opendev.org/openstack/openstack-helm-images", ref, "${JOB_BASE_NAME}")
+
+                // Clone aic-clcp-manifests
+                def ref = determineRef("aic-clcp-manifests")
                 dir ("minimirror/mini-mirror") {
-                    if("${GERRIT_PROJECT}" != "${MINIMIRROR_PROJECT}"){
-                        gerrit.cloneProject(GERRIT_CLONE_URL + "/" + conf.GLOBAL_REPO, GERRIT_REFSPEC, REFSPEC, conf.GLOBAL_REPO, conf.JENKINS_GERRIT_MTN5_CRED_ID)
-                    }else {
-                        gerrit.cloneProject(GERRIT_CLONE_URL + "/" + conf.GLOBAL_REPO, CLCP_MANIFESTS, REFSPEC, conf.GLOBAL_REPO, conf.JENKINS_GERRIT_MTN5_CRED_ID)
-                    }
-                    artifactory.download("${ARTF_PATH}", "gpgkey-private")
+                    gerrit.cloneProject(GERRIT_CLONE_URL + "/" + conf.GLOBAL_REPO, ref, REFSPEC, conf.GLOBAL_REPO, conf.JENKINS_GERRIT_MTN5_CRED_ID)
                 }
             }
-            stage('Build') {
+            stage("Download private key") {
+                artifactory.download("${ARTF_PATH}", "gpgkey-private")
+            }
+            stage("Build") {
                 dir ("minimirror/mini-mirror"){
                     withCredentials([string(credentialsId: 'mini-mirror-pass', variable: 'MINI_PASS')]) {
                     sh '''
