Fixes Ranger/Ranger-Agent build job not triggering
Change-Id: Ifb554ec3b48415ad9c4032253bc335df6f548942

--- a/images/openstack/ranger/Jenkinsfile
+++ b/images/openstack/ranger/Jenkinsfile
@@ -4,7 +4,7 @@ ncconf = new ncconfig(env).CONF
 
 DOCKER_REGISTRY="${ARTF_DOCKER_URL}"
 IMAGE_TAG= "${GERRIT_PATCHSET_REVISION}"
-IMAGE_PREFIX="openstack"
+IMAGE_PREFIX="x"
 IMAGE_NAME="${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}"
 IMAGE_LATEST = "${IMAGE_PREFIX}/${JOB_BASE_NAME}:latest"
 QUAY_IMAGE_LATEST="attcomdev/${JOB_BASE_NAME}:latest"
